pkg/deps/testdata/ub/project/invalid/non-string-version.ub
project: {
  requires: {
    'github.com/x/y': {
      version: 1
    }
  }
}
